<resources>
    <string name="app_name">playte</string>

    <!-- 메뉴 -->
    <string name="home">홈</string>
    <string name="recipe">레시피</string>
    <string name="upload">업로드</string>
    <string name="community">커뮤니티</string>
    <string name="mypage">마이페이지</string>
    <string name="register">회원가입</string>
    <string name="refrigerator">냉장/냉동</string>
    <string name="ambient">실온</string>
    <string name="food_price_trends">식재료 물가 추이</string>
    <string name="view_all">전체보기</string>
    <string name="my_recipe">My 재료 활용 레시피</string>
    <string name="recommend_ingredients">My 재료 관리법 추천</string>
    <string name="ingredient_add">식재료 등록</string>
    <string name="my_recipe_register">나의 레시피 등록</string>
    <string name="shortform">숏폼</string>

    <!-- 식재료 물가 추이 -->
    <string name="trends_search_hint">식재료를 검색해보세요.</string>

    <!--공통-->
    <string name="cancel">취소</string>
    <string name="ingredient_name">재료 이름</string>
    <string name="save">등록</string>
    <string name="add">저장</string>
    <string name="etc">기타</string>
    <string name="next">다음</string>
    <string name="thumbnail">썸네일</string>
    <string name="complete">완료</string>
    <string name="newest">최신순</string>
    <string name="popular">인기순</string>
    <string name="ingredients_included">재료 포함순</string>
    <string name="minimum_time">최소 시간순</string>
    <string name="comment">댓글</string>
    <string name="reply">답글</string>
    <string name="no_favorite">관심 없음</string>
    <string name="alert">신고하기</string>
    <string name="send_reply">의견보내기</string>
    <string name="count">개</string>
    <string name="check">확인</string>

    <!-- 레시피 -->
    <string name="recipe_searchview_hint">레시피 및 재료를 검색해보세요.</string>
    <string name="ingredient">재료</string>
    <string name="spices">양념</string>
    <string name="recipe_recommend_info">이런 레시피는 어때요?</string>
    <string name="recipe_review">리뷰 작성</string>
    <string name="recipe_recent_search">최근 검색어</string>
    <string name="recipe_popular_search">인기 검색어</string>
    <string name="recipe_review_msg">레시피는 어떠셨나요?</string>
    <string name="recipe_review_1">솔직한 후기를 남겨주세요.</string>
    <string name="recipe_review_hint">최소 10자 이상 입력해주세요.</string>
    <string name="recipe_review_photo">사진 후기</string>
    <string name="recipe_register_title">레시피 이름</string>
    <string name="recipe_register_description">레시피 설명</string>
    <string name="recipe_register_ingredient">재료/양념</string>
    <string name="recipe_register_time">조리시간</string>
    <string name="recipe_register_people">인분</string>
    <string name="recipe_register_order">조리단계</string>
    <string name="recipe_register_title_hint">레시피 이름을 입력해주세요.</string>
    <string name="recipe_register_description_hint">레시피에 대한 설명을 간략히 입력해주세요</string>
    <string name="recipe_register_minutes">분</string>
    <string name="recipe_register_step_info">레시피를 입력해주세요.</string>
    <string name="recipe_register_ingredient_info">재료 및 양념을 입력해주세요.</string>
    <string name="recipe_order_best">베스트순</string>
    <string name="recipe_order_recent">최신순</string>
    <string name="recipe_comment_info">댓글을 적어보세요.</string>
    <string name="recipe_dialog_hin">필요한 양(mL)을 입력해주세요</string>
    <string name="recipe_theme_1">자취생 필수!</string>
    <string name="recipe_theme_2">다이어터를 위한 레시피</string>
    <string name="recipe_theme_3">알뜰살뜰 만원의 행복</string>
    <string name="recipe_theme_4">집들이용 레시피</string>

    <!-- 온보딩 -->
    <string name="simple_login">간편 로그인</string>
    <string name="login">로그인</string>
    <string name="onboard_info">당신을 위한 레시피 제공 서비스</string>
    <string name="onboard_input_nickname">반가워요!\n제가 뭐라고 부르면 될까요?</string>
    <string name="onboard_input_nickname_hint">닉네임을 입력해주세요.</string>
    <string name="onboard_input_nickname_next">렛츠 플레이트!</string>
    <string name="onboard_check_nickname">사용가능한 닉네임</string>
    <string name="onboard_complete">RE:cipe\n가입을 축하드려요</string>
    <string name="onboard_complete1">당신만을 위한 맛있는 레시피를 제공해드려요.</string>

    <!--업로드-->
    <string name="upload_write">글로 게시</string>
    <string name="upload_shorts">숏폼으로 게시</string>

    <!-- 홈 -->
    <string name="fresh_food">신선식품</string>
    <string name="baking">빵/과자</string>
    <string name="drinking">음료</string>
    <string name="meal_kit">밀키트</string>
    <string name="side_dish">반찬</string>
    <string name="can">통조림</string>
    <string name="instant">인스턴트</string>

    <!--  숏폼  -->
    <string name="shorts_time">00:21</string>
    <string name="shorts_play_time">00:49</string>
    <string name="shorts_upload">커버편집</string>

    <!--  마이페이지  -->
    <string name="mypage_title">님 맛있는 식사 하세요!</string>
    <string name="setting">설정</string>
    <string name="mypage_save_recipe">저장 레시피</string>
    <string name="mypage_write_recipe">작성 레시피</string>
    <string name="mypage_my_review">내가 쓴 리뷰</string>
    <string name="mypage_recent_shorts">최근에 시청한 숏폼</string>
    <string name="mypage_recent_recipe">최근에 본 레시피</string>
    <string name="mypage_setting_nick">닉네임 관리</string>
    <string name="mypage_setting_info">공지사항</string>
    <string name="mypage_setting_qna">Q&amp;A</string>
    <string name="mypage_setting_terms_of_use">이용약관</string>
    <string name="mypage_setting_logout">로그아웃</string>
    <string name="mypage_setting_withdrawal">회원탈퇴</string>
    <string name="mypage_remove_msg">삭제하시겠습니까?</string>
    <string name="no">아니요</string>
    <string name="yes">예</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>