<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mypageNoticeFragment">
    <fragment
        android:id="@+id/writeRecipeFragment"
        android:name="com.cmc.recipe.presentation.ui.mypage.WriteRecipeFragment"
        android:label="@string/mypage_write_recipe"
        tools:layout="@layout/fragment_write_recipe" />
    <fragment
        android:id="@+id/saveRecipeFragment"
        android:name="com.cmc.recipe.presentation.ui.mypage.SaveRecipeFragment"
        android:label="@string/mypage_save_recipe"
        tools:layout="@layout/fragment_save_recipe" />
    <fragment
        android:id="@+id/myReviewFragment"
        android:name="com.cmc.recipe.presentation.ui.mypage.MyReviewFragment"
        android:label="@string/mypage_my_review"
        tools:layout="@layout/fragment_my_review" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.cmc.recipe.presentation.ui.mypage.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_settingFragment_to_mypageNicknameFragment"
            app:destination="@id/mypageNicknameFragment" />
        <action
            android:id="@+id/action_settingFragment_to_mypageQnaFragment"
            app:destination="@id/mypageQnaFragment" />
        <action
            android:id="@+id/action_settingFragment_to_mypageTermsFragment"
            app:destination="@id/mypageTermsFragment" />
        <action
            android:id="@+id/action_settingFragment_to_mypageNoticeFragment"
            app:destination="@id/mypageNoticeFragment" />
    </fragment>

    <fragment
        android:id="@+id/mypageQnaFragment"
        android:name="com.cmc.recipe.presentation.ui.mypage.MypageQnaFragment"
        android:label="Q&amp;A"
        tools:layout="@layout/fragment_mypage_qna" />
    <fragment
        android:id="@+id/mypageTermsFragment"
        android:name="com.cmc.recipe.presentation.ui.mypage.MypageTermsFragment"
        android:label="이용약관"
        tools:layout="@layout/fragment_mypage_terms" />
    <fragment
        android:id="@+id/mypageNicknameFragment"
        android:name="com.cmc.recipe.presentation.ui.mypage.MypageNicknameFragment"
        android:label="@string/mypage_setting_nick"
        tools:layout="@layout/fragment_mypage_nickname" />
    <action
        android:id="@+id/action_settingFragment_to_loginFragment"
        app:destination="@id/loginFragment" />
    <fragment
        android:id="@+id/mypageNoticeFragment"
        android:name="com.cmc.recipe.presentation.ui.mypage.MypageNoticeFragment"
        android:label="공지사항" />
</navigation>