<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.recipe.RecipeThemeFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:checkedChip="@id/btn_recipe_newest"
        app:chipSpacingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_recipe_newest"
            style="@style/RecipeChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_recipe_popular"
            style="@style/RecipeChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_recipe_minium_time"
            style="@style/RecipeChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimum_time" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_recipe" />
</androidx.constraintlayout.widget.ConstraintLayout>